--- a/Step 3 -- Flask Development/templates/basic/base.html
+++ b/Step 3 -- Flask Development/templates/basic/base.html
@@ -24,7 +24,7 @@
     <!-- Main CSS File -->
     <link href="/static/css/main.css" rel="stylesheet">
 </head>
-<body class="d-flex flex-column min-vh-100 bg-light text-center">
+<body class="d-flex flex-column min-vh-100 bg-light">
 
     <!-- Incluir header -->
     {% include 'basic/header.html' %}
