Links to header
Updated links for header to work correctly

--- a/Step 3 -- Flask Development/templates/basic/header.html
+++ b/Step 3 -- Flask Development/templates/basic/header.html
@@ -6,9 +6,9 @@
 
         <nav id="navmenu" class="navmenu">
             <ul>
-                <li><a href="#" class="active" data-translate="analyze">Solicitar Análisis</a></li>
-                <li><a href="#" data-translate="stats">Estadísticas</a></li>
-                <li><a href="#" data-translate="recent">Análisis Recientes</a></li>
+                <li><a href="/" data-translate="analyze">Solicitar Análisis</a></li>
+                <li><a href="/stats" data-translate="stats">Estadísticas</a></li>
+                <li><a href="/recent" data-translate="recent">Análisis Recientes</a></li>
             </ul>
             <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
