--- a/Step 3 -- Flask Development/templates/analysis.html
+++ b/Step 3 -- Flask Development/templates/analysis.html
@@ -48,7 +48,6 @@
         <div class="container section-circle">
             <div class="section-title">
                 <h2 data-translate="analysisTitle"></h2>
-
                 <div class="progress-circle-container mb-4">
                     <div class="circle-progress"
                          data-value="{{ (1 - product.ml_predict_avg) * 100 }}"
@@ -57,7 +56,18 @@
                     </div>
                 </div>
             </div>
-
+            <div class="section-title">
+                <h2 data-translate="authenticityDistribution"></h2>
+            </div>
+            <div class="chart-card">
+                <div class="chart-container" style="height: 400px">
+                    <canvas id="authenticityDistributionChart"></canvas>
+                </div>
+            </div>
+            <div id="authDistributionData"
+                 data-labels="{{ authenticity_distribution.keys()|list|tojson|forceescape }}"
+                 data-values="{{ authenticity_distribution.values()|list|tojson|forceescape }}">
+            </div>
             <div class="line-separator" data-aos="fade-up" data-aos-delay="300"></div>
 
             <div class="row g-4">
