--- a/Step 3 -- Flask Development/templates/basic/footer.html
+++ b/Step 3 -- Flask Development/templates/basic/footer.html
@@ -1,9 +1,9 @@
-<footer id="footer" class="footer">
+<footer id="footer" class="footer" style="min-height: 300px;">
     <div class="container">
         <div class="row mb-lg-4">
             <div class="col mt-lg-4">
-                <img src="/static/img/AmCheck.png" alt="AmCheck" class="img-fluid mx-auto d-none d-md-block" style="width: 25%; height: auto;">
-                <img src="/static/img/AmCheck.png" alt="AmCheck" class="img-fluid mx-auto d-block d-md-none" style="width: 50%; height: auto;">
+                <img src="/static/img/AmCheck.webp" alt="AmCheck" class="img-fluid mx-auto d-none d-md-block" style="width: 25%; height: auto;">
+                <img src="/static/img/AmCheck.webp" alt="AmCheck" class="img-fluid mx-auto d-block d-md-none" style="width: 50%; height: auto;">
             </div>
         </div>
         <div class="row mb-lg-4 text-start">
