--- a/Step 3 -- Flask Development/templates/basic/header.html
+++ b/Step 3 -- Flask Development/templates/basic/header.html
@@ -1,7 +1,7 @@
 <header id="header" class="header d-flex align-items-center fixed-top">
-    <div class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
+    <div class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between" style="height: 80px;">
         <a href="/" class="logo d-flex align-items-center me-auto me-xl-0">
-            <img src="/static/img/AmCheck.png" alt="AmCheck" class="img-fluid">
+            <img src="/static/img/AmCheck.webp" alt="AmCheck" class="img-fluid">
         </a>
 
         <nav id="navmenu" class="navmenu">
