--- a/Step 3 -- Flask Development/templates/index.html
+++ b/Step 3 -- Flask Development/templates/index.html
@@ -82,14 +82,14 @@
                     </ul>
                 </div>
                 <div class="col-lg-6 order-1 order-lg-2 text-center">
-                    <img src="/static/img/ServicesItem1.png" alt="" class="img-fluid">
+                    <img src="/static/img/ServicesItem1.webp" alt="" width="1024" height="1024" style="aspect-ratio: 1/1" class="img-fluid" loading="lazy">
                 </div>
             </div><!-- End tab content item -->
         </div>
         <div class="container service-item mb-lg-4" data-aos="fade-up" data-aos-delay="200">
             <div class="row">
                 <div class="col-lg-6 order-1 order-lg-1 text-center">
-                    <img src="/static/img/ServicesItem2.png" alt="" class="img-fluid">
+                    <img src="/static/img/ServicesItem2.webp" alt="" width="1024" height="1024" style="aspect-ratio: 1/1" class="img-fluid" loading="lazy">
                 </div>
                 <div class="col-lg-6 order-2 order-lg-2 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
                     <h3 data-translate="sectionTitle-service2"></h3>
@@ -204,4 +204,8 @@
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block scripts %}
+    <script type="module" src="/static/js/index.js"></script>
 {% endblock %}
