--- a/Step 3 -- Flask Development/templates/basic/base.html
+++ b/Step 3 -- Flask Development/templates/basic/base.html
@@ -6,23 +6,44 @@
         <title>{% block title %}{% endblock %}</title>
 
         <!-- Favicons -->
-        <link href="/static/img/favicon.png" rel="icon">
+        <link href="/static/img/favicon.webp" rel="icon">
 
         <!-- Flag Icons -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flag-icons@7.2.3/css/flag-icons.min.css">
+         <link rel="preload" href="https://cdn.jsdelivr.net/npm/flag-icons@7.2.3/css/flag-icons.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+        <noscript>
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flag-icons@7.2.3/css/flag-icons.min.css">
+        </noscript>
 
         <!-- Fonts -->
         <link href="https://fonts.googleapis.com" rel="preconnect">
         <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
+
+        <style>
+            @font-face {
+                font-family: 'Roboto';
+                font-style: normal;
+                font-weight: 400;
+                font-display: swap;
+                src: url(https://fonts.gstatic.com/s/roboto/v30/KFOmCnqEu92Fr1Mu4mxK.woff2) format('woff2');
+            }
+
+            body {
+                font-family: system-ui, -apple-system, sans-serif;
+                /* Fallback mientras carga Roboto */
+            }
+        </style>
 
         <!-- Vendor CSS Files -->
-        <link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-        <link href="/static/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+        <link rel="stylesheet" href="/static/vendor/bootstrap/css/bootstrap.min.css">
+
+         <link rel="preload" href="/static/vendor/bootstrap-icons/bootstrap-icons.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+        <noscript><link rel="stylesheet" href="/static/vendor/bootstrap-icons/bootstrap-icons.css"></noscript>
+
         <link href="/static/vendor/aos/aos.css" rel="stylesheet">
 
         <!-- Main CSS File -->
-        <link href="/static/css/main.css" rel="stylesheet">
+        <link rel="stylesheet" href="/static/css/main.css">
     </head>
     <body class="d-flex flex-column min-vh-100">
 
@@ -40,29 +61,23 @@
         <!-- Scroll Top -->
         <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-        <!-- jQuery -->
-        <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-
-        <!-- Circle Progress (jQuery version) -->
-        <script src="https://cdn.jsdelivr.net/npm/jquery-circle-progress@1.2.2/dist/circle-progress.min.js"></script>
-
         <!-- Bootstrap JS Bundle -->
-        <script src="/static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+        <script src="/static/vendor/bootstrap/js/bootstrap.bundle.min.js" defer></script>
 
         <!-- Vendor JS Files -->
-        <script src="/static/vendor/aos/aos.js"></script>
+        <script src="/static/vendor/aos/aos.js" defer></script>
 
         <!-- DOMPurify for XSS Protection -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.6/purify.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.6/purify.min.js" defer></script>
 
         <!-- Polyfill for Inert -->
-        <script src="https://unpkg.com/wicg-inert@latest/dist/inert.min.js"></script>
-
-        <!-- Chart.js and CountUp.js for stats view -->
-        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/countup.js@1.9.3/dist/countUp.min.js"></script>
+        <script src="https://unpkg.com/wicg-inert@latest/dist/inert.min.js" defer></script>
 
         <!-- Main JS File -->
-        <script src="/static/js/main.js"></script>
+        <script type="module" src="/static/js/main.js" defer></script>
+
+        <!-- JS Files only used in certain views -->
+        {% block scripts %}
+        {% endblock %}
     </body>
 </html>
