--- a/Step 3 -- Flask Development/templates/error.html
+++ b/Step 3 -- Flask Development/templates/error.html
@@ -10,18 +10,23 @@
         <div class="row justify-content-center">
             <div class="col-12 text-center">
                 <h1 class="display-4" data-translate="errorTitle"></h1>
+                {% if error_route == "Index" %}
+                    <p class="lead" data-translate="errorIndexDescription"></p><br>
+                {% endif %}
                 {% if error_route == "Result" %}
                     <p class="lead" data-translate="errorResultDescription"></p><br>
+                    <a href="/" class="btn btn-primary-form btn-lg" data-translate="backToHome"></a>
                 {% endif %}
 
                 {% if error_route == "Recents" %}
                     <p class="lead" data-translate="errorRecentsDescription"></p><br>
+                    <a href="/" class="btn btn-primary-form btn-lg" data-translate="backToHome"></a>
                 {% endif %}
 
                 {% if error_route == "Stats" %}
                     <p class="lead" data-translate="errorStatsDescription"></p><br>
+                    <a href="/" class="btn btn-primary-form btn-lg" data-translate="backToHome"></a>
                 {% endif %}
-                <a href="/" class="btn btn-primary-form btn-lg" data-translate="backToHome"></a>
             </div>
         </div>
     </div>
