Bug Fix (Final Commit v6)
Fixed not showing circular graphic of puntuation in recent

--- a/Step 3 -- Flask Development/templates/recent.html
+++ b/Step 3 -- Flask Development/templates/recent.html
@@ -47,3 +47,14 @@
         </div>
     </section>
 {% endblock %}
+
+{% block scripts %}
+        <!-- jQuery -->
+        <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+
+        <!-- Circle Progress (jQuery version) -->
+        <script src="https://cdn.jsdelivr.net/npm/jquery-circle-progress@1.2.2/dist/circle-progress.min.js"></script>
+
+        <!-- Recent Page Scripts -->
+        <script type="module" src="/static/js/recent.js"></script>
+{% endblock %}
